--- a/index.html
+++ b/index.html
@@ -14,9 +14,51 @@
 </head>
 
 <body>
+    <!-- PAGE 1 -->
+    <div class="container home-page" id="home">
+        <header class="d-flex justify-content-center fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#mh-home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#mh-about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#mh-portfolio">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#mh-contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <div class="main-page-intro">
+            <div class="row justify-content-center align-items-center align-page-center">
+                <div class="col hello-text">
+                    <p>Hello I'm</p>
+                    <h3>Tom Santek</h3>
+                    <p>Front End Developer</p>
+                    <p>Based in Phoenix, Arizona</p>
+                    <a href="#" class="contact-button">Contact me</a>
+                </div>
+                <div class="col hello-picture">
+                    <div class="image-page-one"></div>
+                </div>
+            </div>
+        </div>
 
 
 
+
+    </div>
 
 
 
