second page finished

--- a/index.html
+++ b/index.html
@@ -61,6 +61,40 @@
     </div>
 
 
+    <!-- PAGE 2 -->
+
+
+    <div class="container page" id="about">
+        <div class="row page-two-container">
+            <div class="col"><img src="src/img/ab-img.png" alt="computer guy img"></div>
+            <div class="col">
+                <h3>About me:</h3>
+                <p>Hello, I’m a Tom, web-developer based on Phoenix, Arizona, US.</p>
+                <p>I have rich experience in:</p>
+                <div class="programming-languages">
+                    <div class="row class-test">
+                        <div class="col prog-lan-item">HTML</div>
+                        <div class="col prog-lan-item">CSS</div>
+                        <div class="col prog-lan-item">JavaScript</div>
+                        <div class="col prog-lan-item">SQL</div>
+                        <div class="col prog-lan-item">PHP</div>
+                        <div class="col prog-lan-item">Wordpress</div>
+                        <div class="col prog-lan-item">React</div>
+                        <div class="col prog-lan-item">Node</div>
+                        <div class="col prog-lan-item">GIT</div>
+                        <div class="col prog-lan-item">Mocha</div>
+                        <div class="col prog-lan-item">Selenium/Webdriver</div>
+                        <div class="col prog-lan-item">Jira</div>
+                        <div class="col prog-lan-item">Google</div>
+                        <div class="col prog-lan-item">MongoDB</div>
+                        <div class="col prog-lan-item">Bootstrap</div>
+                        <div class="col prog-lan-item">Normalize</div>
+                        <div class="col prog-lan-item jquery-list">jQuery</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
