fourth  page finished

--- a/index.html
+++ b/index.html
@@ -135,6 +135,26 @@
 
     </div>
 
+    <!-- PAGE 4 -->
+
+    <div class="container page">
+        <h3 class="contact-me-page-header">Contact</h3>
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" required class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Subject</label>
+                <textarea class="form-control" required id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="alert alert-success" role="alert">
+                Thank you for getting in touch!
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
