--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="src/main.css">
     <title>Tom Santek - Front End Developer</title>
@@ -24,16 +26,25 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#mh-home">Home</a>
+                            <a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mh-about">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mh-portfolio">Portfolio</a>
+                            <a class="nav-link" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mh-contact">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/tsantek" target="_blank"><i class="fab fa-github"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://linkedin.com/in/tsantek" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://twitter.com/tsantek" target="_blank"><i class="fab fa-twitter"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -69,7 +80,7 @@
             <div class="col"><img src="src/img/ab-img.png" alt="computer guy img"></div>
             <div class="col">
                 <h3>About me:</h3>
-                <p>Hello, I’m a Tom, web-developer based on Phoenix, Arizona, US.</p>
+                <p>Hello, I’m a Tom, web-developer based in Phoenix, Arizona, US.</p>
                 <p>I have rich experience in:</p>
                 <div class="programming-languages">
                     <div class="row class-test">
@@ -100,34 +111,34 @@
 
     <div class="container page" id="portfolio">
         <h3>Projects</h3>
-        <div class="row">
-            <div class="col">
+        <div class="row ">
+            <div class="col-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="src/img/demo-home.jpg" class="card-img-top" alt="...">
+                    <img src="src/img/node.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Nodejs.org clone</h5>
+                        <p class="card-text">Github repositorie with NodeJs.org clone. </p>
+                        <a href="https://github.com/tsantek/nodeJsClone" target="_blank" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="src/img/amazon.jpg" class="card-img-top" alt="...">
+                    <img src="src/img/pixel.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Pixel art maker</h5>
+                        <p class="card-text">Pxel art maker will allow a user to choose colors from a palette and then paint pixel art</p>
+                        <a href="https://github.com/tsantek/pixel-art-maker" target="_blank" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="src/img/sep-home.webp" class="card-img-top" alt="...">
+                    <img src="src/img/grid.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Rool Your Own Grid</h5>
+                        <p class="card-text">Website with simple responsive grid system example.</p>
+                        <a href="https://github.com/tsantek/rollYourOwnGrid" target="_blank" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +148,7 @@
 
     <!-- PAGE 4 -->
 
-    <div class="container page">
+    <div class="container page" id="contact">
         <h3 class="contact-me-page-header">Contact</h3>
         <form>
             <div class="form-group">
@@ -160,6 +171,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
