--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
     <!-- PAGE 1 -->
     <div class="container home-page" id="home">
         <header class="d-flex justify-content-center fixed-top" id="navbar-example">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand navbar-light">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="navbar-collapse collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item d-none d-sm-block">
                             <a class="nav-link" href="#home">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-none d-sm-block">
                             <a class="nav-link" href="#about">About</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-none d-sm-block">
                             <a class="nav-link" href="#portfolio">Portfolio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-none d-sm-block">
                             <a class="nav-link" href="#blog">Blog</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-none d-sm-block">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
@@ -60,7 +60,7 @@
             </nav>
         </header>
 
-        <div class="main-page-intro">
+        <div class="main-page-intro d-none d-sm-block">
             <div class="row justify-content-center align-items-center align-page-center">
                 <div class="col hello-text">
                     <p>Hello I'm</p>
@@ -69,22 +69,43 @@
                     <p>Based in Phoenix, Arizona</p>
                     <a href="#contact" class="contact-button">Contact me</a>
                 </div>
-                <div class="col hello-picture">
+                <div class="col hello-picture ">
                     <div class="image-page-one"></div>
                 </div>
             </div>
 
             <div id="about"></div>
         </div>
+
+
+        <!-- mobile version -->
+
+        <div class="main-page-intro-mobile d-block d-sm-none">
+            <div class="">
+                <div class="hello-picture">
+                    <div class="image-page-one"></div>
+                </div>
+                <div class="hello-text">
+                    <p>Hello I'm</p>
+                    <h3>Tom Santek</h3>
+                    <p>Front End Developer</p>
+                    <p>Based in Phoenix, Arizona</p>
+                    <a href="#contact" class="contact-button">Contact me</a>
+                </div>
+
+            </div>
+
+            <div id="about"></div>
+        </div>
     </div>
 
-
+    </div>
     <!-- PAGE 2 -->
 
     <div class="container page">
         <div class="row page-two-container">
-            <div class="col"><img src="src/img/ab-img.png" alt="computer guy img"></div>
-            <div class="col">
+            <div class="col-md-6 col-sm-12 col-lg-6"><img src="src/img/ab-img.png" alt="computer guy img"></div>
+            <div class="col-md-6 col-sm-12 col-lg-6">
                 <h3>About me:</h3>
                 <p>Hello, I’m a Tom, web-developer based in Phoenix, Arizona, US.</p>
                 <p> I am passionate about building excellent software that improves the lives of those around me. I specialize in building applications specific to the business needs of my clients. I have done work in front-end and back-end web development.</p>
@@ -121,7 +142,7 @@
     <div class="container page portfolio">
         <h3>Projects</h3>
         <div class="row ">
-            <div class="col-4 d-flex justify-content-center">
+            <div class="col-sm-12 col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="src/img/node.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -131,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 d-flex justify-content-center">
+            <div class="col-sm-12 col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="src/img/pixel.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -141,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 d-flex justify-content-center">
+            <div class="col-sm-12  col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <img src="src/img/grid.png" class="card-img-top" alt="...">
                     <div class="card-body">
