--- a/index.html
+++ b/index.html
@@ -23,44 +23,44 @@
 
 <body data-spy="scroll" data-target="#navbar-example">
     <!-- PAGE 1 -->
-    <div class="container home-page" id="home">
-        <header class="d-flex justify-content-center fixed-top" id="navbar-example">
-            <nav class="navbar navbar-expand navbar-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+    <header class="d-flex justify-content-center fixed-top" id="navbar-example">
+        <nav class="navbar navbar-expand navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item d-none d-sm-block">
-                            <a class="nav-link" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item d-none d-sm-block">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item d-none d-sm-block">
-                            <a class="nav-link" href="#portfolio">Portfolio</a>
-                        </li>
-                        <li class="nav-item d-none d-sm-block">
-                            <a class="nav-link" href="#blog">Blog</a>
-                        </li>
-                        <li class="nav-item d-none d-sm-block">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/tsantek" target="_blank"><i class="fab fa-github"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="http://linkedin.com/in/tsantek" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://twitter.com/tsantek" target="_blank"><i class="fab fa-twitter"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-
-        <div class="main-page-intro d-none d-sm-block">
+            <div class="navbar-collapse collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item d-none d-sm-block">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item d-none d-sm-block">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item d-none d-sm-block">
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item d-none d-sm-block">
+                        <a class="nav-link" href="#blog">Blog</a>
+                    </li>
+                    <li class="nav-item d-none d-sm-block">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/tsantek" target="_blank"><i class="fab fa-github"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://linkedin.com/in/tsantek" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://twitter.com/tsantek" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container home-page d-none d-sm-block" id="home">
+        <div class="main-page-intro">
             <div class="row justify-content-center align-items-center align-page-center">
                 <div class="col hello-text">
                     <p>Hello I'm</p>
@@ -76,33 +76,32 @@
 
             <div id="about"></div>
         </div>
+    </div>
 
+    <!-- mobile version page 1-->
 
-        <!-- mobile version -->
-
-        <div class="main-page-intro-mobile d-block d-sm-none">
-            <div class="">
-                <div class="hello-picture">
-                    <div class="image-page-one"></div>
-                </div>
-                <div class="hello-text">
-                    <p>Hello I'm</p>
-                    <h3>Tom Santek</h3>
-                    <p>Front End Developer</p>
-                    <p>Based in Phoenix, Arizona</p>
-                    <a href="#contact" class="contact-button">Contact me</a>
-                </div>
-
+    <div class="main-page-intro-mobile d-block d-sm-none">
+        <div class="">
+            <div class="hello-picture-mobile d-flex justify-content-center">
+                <div class="image-page-one"></div>
+            </div>
+            <div class="hello-text ">
+                <p>Hello I'm</p>
+                <h3>Tom Santek</h3>
+                <p>Front End Developer</p>
+                <p>Based in Phoenix, Arizona</p>
+                <a href="#contact" class="contact-button">Contact me</a>
             </div>
 
-            <div id="about"></div>
         </div>
+
+        <div id="about"></div>
     </div>
 
     </div>
     <!-- PAGE 2 -->
 
-    <div class="container page">
+    <div class="container page mobile-page">
         <div class="row page-two-container">
             <div class="col-md-6 col-sm-12 col-lg-6"><img src="src/img/ab-img.png" alt="computer guy img"></div>
             <div class="col-md-6 col-sm-12 col-lg-6">
