finished css and html

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             </div>
         </nav>
     </header>
+    <!-- Desktop and tablet version page 1 -->
     <div class="container home-page d-none d-sm-block" id="home">
         <div class="main-page-intro">
             <div class="row justify-content-center align-items-center align-page-center">
@@ -85,7 +86,7 @@
             <div class="hello-picture-mobile d-flex justify-content-center">
                 <div class="image-page-one"></div>
             </div>
-            <div class="hello-text ">
+            <div class="hello-text">
                 <p>Hello I'm</p>
                 <h3>Tom Santek</h3>
                 <p>Front End Developer</p>
@@ -108,7 +109,7 @@
                 <h3>About me:</h3>
                 <p>Hello, I’m a Tom, web-developer based in Phoenix, Arizona, US.</p>
                 <p> I am passionate about building excellent software that improves the lives of those around me. I specialize in building applications specific to the business needs of my clients. I have done work in front-end and back-end web development.</p>
-                <p>I have rich experience in:</p>
+                <p>I have experience in:</p>
                 <div class="programming-languages">
                     <div class="row class-test">
                         <div class="col prog-lan-item">HTML</div>
@@ -146,8 +147,10 @@
                     <img src="src/img/node.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Nodejs.org clone</h5>
-                        <p class="card-text">Github repositorie with NodeJs.org clone. </p>
-                        <a href="https://github.com/tsantek/nodeJsClone" target="_blank" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Github repositorie with NodeJs.org clone. Build with Bootstrap and custom CSS. </p>
+                        <div class="d-flex justify-content-end">
+                            <a href="https://github.com/tsantek/nodeJsClone" target="_blank" class="btn btn-primary ">More..</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -157,7 +160,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Pixel art maker</h5>
                         <p class="card-text">Pxel art maker will allow a user to choose colors from a palette and then paint pixel art</p>
-                        <a href="https://github.com/tsantek/pixel-art-maker" target="_blank" class="btn btn-primary">Go somewhere</a>
+                        <div class="d-flex justify-content-end">
+                            <a href="https://github.com/tsantek/pixel-art-maker" target="_blank" class="btn btn-primary">More..</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -166,8 +171,10 @@
                     <img src="src/img/grid.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Rool Your Own Grid</h5>
-                        <p class="card-text">Website with simple responsive grid system example.</p>
-                        <a href="https://github.com/tsantek/rollYourOwnGrid" target="_blank" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Website with simple custome responsive grid system example built in HTML and CSS.</p>
+                        <div class="d-flex justify-content-end">
+                            <a href="https://github.com/tsantek/rollYourOwnGrid" target="_blank" class="btn btn-primary">More..</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -186,8 +193,8 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title blog-card-title">Learn to learn before you start learning programming</h5>
-                <p class="card-text">Learn to learn before you start learning programming.</p>
-                <a href="https://medium.com/@santek.vg/learn-to-learn-before-you-start-learning-programming-863c112bb07f" class="btn btn-primary">Read blog post...</a>
+                <p class="card-text">The journey of a thousand miles begins with one step. — Lao Tzu</p>
+                <a href="https://medium.com/@santek.vg/learn-to-learn-before-you-start-learning-programming-863c112bb07f" target="_blank" class="btn btn-primary">Read blog post...</a>
             </div>
             <div class="card-footer text-muted">
                 12 days ago
@@ -200,7 +207,7 @@
 
     <!--  PAGE 5 -->
 
-    <div class="container page" id="contact">
+    <div class="container page contact" id="contact">
         <h3 class="contact-me-page-header">Contact</h3>
         <form>
             <div class="form-group">
@@ -226,4 +233,4 @@
 
 </body>
 
-</html>
+</html
