--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="src/main.css">
     <title>Tom Santek - Front End Developer</title>
+
 </head>
 
-<script>
-    ('body').scrollspy({
-        target: '#navbar-example'
-    })
-</script>
+
+
 
 <body data-spy="scroll" data-target="#navbar-example">
     <!-- PAGE 1 -->
-
     <header class="d-flex justify-content-center fixed-top" id="navbar-example">
         <nav class="navbar navbar-expand navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,6 +71,7 @@
                     <div class="image-page-one"></div>
                 </div>
             </div>
+            <div class="arrow"></div>
 
             <div id="about"></div>
         </div>
@@ -93,10 +91,7 @@
                 <p>Based in Phoenix, Arizona</p>
                 <a href="#contact" class="contact-button">Contact me</a>
             </div>
-
         </div>
-
-        <div id="about"></div>
     </div>
 
     </div>
@@ -197,7 +192,7 @@
                 <a href="https://medium.com/@santek.vg/learn-to-learn-before-you-start-learning-programming-863c112bb07f" target="_blank" class="btn btn-primary">Read blog post...</a>
             </div>
             <div class="card-footer text-muted">
-                12 days ago
+                <p id="time-of-post"></p>
             </div>
 
         </div>
@@ -211,26 +206,26 @@
         <h3 class="contact-me-page-header">Contact</h3>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" required class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="email">Email address</label>
+                <input type="email" disabled class="form-control" id="email" placeholder="name@example.com">
             </div>
             <div class="form-group">
-                <label for="exampleFormControlTextarea1">Subject</label>
-                <textarea class="form-control" required id="exampleFormControlTextarea1" rows="3"></textarea>
+                <label for="textArea">Subject</label>
+                <textarea class="form-control" disabled id="textArea" rows="3" placeholder="Form is disable..."></textarea>
             </div>
-            <div class="alert alert-success" role="alert">
-                Thank you for getting in touch!
+            <div class="alert alert-danger" role="alert">
+                Please contact me over Linkedin... Thank you... <a class="nav-link" href="http://linkedin.com/in/tsantek" target="_blank"><i class="fab fa-linkedin"> <b>LinkedIn</b></i></a>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button disabled type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
     <!-- Optional JavaScript -->
+    <script src="./src/main.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
 
 </html
