--- a/index.html
+++ b/index.html
@@ -182,10 +182,7 @@
 
     <div class="container page blog">
         <h3>Blog</h3>
-        <div class="card text-center">
-            <div class="card-header">
-                Last blog post
-            </div>
+        <div class="card text-center post-one">
             <div class="card-body">
                 <h5 class="card-title blog-card-title">Learn to learn before you start learning programming</h5>
                 <p class="card-text">The journey of a thousand miles begins with one step. — Lao Tzu</p>
@@ -194,7 +191,16 @@
             <div class="card-footer text-muted">
                 <p id="time-of-post"></p>
             </div>
-
+        </div>
+        <div class="card text-center post-two">
+            <div class="card-body">
+                <h5 class="card-title blog-card-title">Github Pages</h5>
+                <p class="card-text">Launch a Website with a Custom URL using Github Pages for free</p>
+                <a href="https://medium.com/@santekTom/launch-a-website-with-a-custom-url-using-github-pages-for-free-2019-85a0c30d4a44" target="_blank" class="btn btn-primary">Read blog post...</a>
+            </div>
+            <div class="card-footer text-muted">
+                <p id="time-of-post-page-two"></p>
+            </div>
         </div>
     </div>
 
