--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="image-page-one"></div>
                 </div>
             </div>
-            <div class="arrow"></div>
+            <div class="arrow show"></div>
 
             <div id="about"></div>
         </div>
@@ -226,12 +226,14 @@
         </form>
     </div>
 
-    <!-- Optional JavaScript -->
-    <script src="./src/main.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+    <!-- Optional JavaScript -->
+    <script src="./src/main.js"></script>
 </body>
 
 </html
