--- a/index.html
+++ b/index.html
@@ -107,23 +107,40 @@
                 <p>I have experience in:</p>
                 <div class="programming-languages">
                     <div class="row class-test">
+                        <!-- HTML -->
                         <div class="col prog-lan-item">HTML</div>
                         <div class="col prog-lan-item">CSS</div>
+                        <!-- CSS FRAMEWORKS -->
+                        <div class="col prog-lan-item">Bootstrap</div>
+                        <div class="col prog-lan-item">Normalize</div>
+                        <div class="col prog-lan-item">Semantic</div>
+                        <!-- JAVASCRIPT -->
                         <div class="col prog-lan-item">JavaScript</div>
-                        <div class="col prog-lan-item">SQL</div>
-                        <div class="col prog-lan-item">PHP</div>
-                        <div class="col prog-lan-item">Wordpress</div>
+                        <div class="col prog-lan-item">jQuery</div>
                         <div class="col prog-lan-item">React</div>
                         <div class="col prog-lan-item">Node</div>
+                        <div class="col prog-lan-item">Express</div>
+                        <div class="col prog-lan-item">EJS</div>
+                        <div class="col prog-lan-item">Handlebars</div>
+                        <!-- DATABASE -->
+                        <div class="col prog-lan-item">SQL</div>
+                        <div class="col prog-lan-item">MongoDB</div>
+                        <!-- PHP -->
+                        <div class="col prog-lan-item">PHP</div>
+                        <div class="col prog-lan-item">Wordpress</div>
+                        <!-- GIT  -->
                         <div class="col prog-lan-item">GIT</div>
+                        <div class="col prog-lan-item">GitHub</div>
+                        <!-- TESTING -->
                         <div class="col prog-lan-item">Mocha</div>
                         <div class="col prog-lan-item">Selenium/Webdriver</div>
                         <div class="col prog-lan-item">Jira</div>
+                        <!-- Server -->
                         <div class="col prog-lan-item">Google</div>
-                        <div class="col prog-lan-item">MongoDB</div>
-                        <div class="col prog-lan-item">Bootstrap</div>
-                        <div class="col prog-lan-item">Normalize</div>
-                        <div class="col prog-lan-item jquery-list">jQuery</div>
+                        <div class="col prog-lan-item jquery-list">Firebase</div>
+                        <div class="col prog-lan-item jquery-list">Heroku</div>
+
+
                     </div>
                 </div>
             </div>
