--- a/index.html
+++ b/index.html
@@ -156,41 +156,44 @@
         <div class="row ">
             <div class="col-sm-12 col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="src/img/node.png" class="card-img-top" alt="...">
+                    <img src="src/img/dash.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Nodejs.org clone</h5>
-                        <p class="card-text">Github repositorie with NodeJs.org clone. Build with Bootstrap and custom CSS. </p>
+                        <h5 class="card-title">SuperCar Dashboard</h5>
+                        <p class="card-text">carDashboard is a personal projet. Electric SuperCar Dashboard. Screen size: iPad: 768x1024 </p>
                         <div class="d-flex justify-content-end">
-                            <a href="https://github.com/tsantek/nodeJsClone" target="_blank" class="btn btn-primary ">More..</a>
+                            <a href="https://github.com/tsantek/carDashboard" target="_blank" class="btn btn-primary ">More..</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="src/img/pixel.png" class="card-img-top" alt="...">
+                    <img src="src/img/eStmt.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Pixel art maker</h5>
-                        <p class="card-text">Pxel art maker will allow a user to choose colors from a palette and then paint pixel art</p>
+                        <h5 class="card-title">Crypto Search</h5>
+                        <p class="card-text">Crypto Search is a JavaScript application for tracking Crypto Coins.</p>
                         <div class="d-flex justify-content-end">
-                            <a href="https://github.com/tsantek/pixel-art-maker" target="_blank" class="btn btn-primary">More..</a>
+                            <a href="https://github.com/tsantek/CryptoSearch" target="_blank" class="btn btn-primary">More..</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12  col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="src/img/grid.png" class="card-img-top" alt="...">
+                    <img src="src/img/cms.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Rool Your Own Grid</h5>
-                        <p class="card-text">Website with simple custome responsive grid system example built in HTML and CSS.</p>
+                        <h5 class="card-title">MultiPurpose CMS</h5>
+                        <p class="card-text">Website with simple multipurpse CMS Web. EJS + Express + Knex + SQL. Deployed on Heroku.
+                        </p>
                         <div class="d-flex justify-content-end">
-                            <a href="https://github.com/tsantek/rollYourOwnGrid" target="_blank" class="btn btn-primary">More..</a>
+                            <a href="https://github.com/tsantek/multiPurposeCMS" target="_blank" class="btn btn-primary">More..</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <p style="text-align:center; padding-top:10px"><a href="https://github.com/tsantek" target="blank">More Projects on Github</a> </p>
+
 
         <div id="blog"></div>
     </div>
